--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,8 @@
 [phases.setup]
-nixPkgs = ["...", "python311", "python311Packages.pip", "python311Packages.virtualenv"]
+nixPkgs = ["python311", "python311Packages.pip"]
 
 [phases.install]
-cmds = [
-  "cd backend && python -m venv venv && source venv/bin/activate && pip install -r requirements.txt"
-]
+cmds = ["pip install -r requirements.txt"]
 
 [start]
-cmd = "cd backend && source venv/bin/activate && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+cmd = "python main.py"
