--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,34 @@
 {
-    "python.defaultInterpreterPath": "./backend/venv/Scripts/python.exe",
-    "python.terminal.activateEnvironment": true,
-    "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true,
-    "python.formatting.provider": "black",
-    "files.associations": {
-        "*.py": "python"
+    "javascript.preferences.importModuleSpecifier": "relative",
+    "typescript.preferences.importModuleSpecifier": "relative",
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
     },
-    "debug.openDebug": "openOnDebugBreak"
+    "eslint.workingDirectories": [
+        "./frontend",
+        "./backend"
+    ],
+    "files.associations": {
+        "*.js": "javascript",
+        "*.ts": "typescript",
+        "*.vue": "vue"
+    },
+    "emmet.includeLanguages": {
+        "vue-html": "html",
+        "javascript": "javascriptreact"
+    },
+    "debug.openDebug": "openOnDebugBreak",
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[vue]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
