--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,11 @@
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.pip"]
+nixPkgs = ["nodejs", "npm"]
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
+cmds = ["cd backend && npm install"]
+
+[phases.build]
+cmds = ["cd frontend && npm install && npm run build"]
 
 [start]
-cmd = "python main.py"
+cmd = "cd backend && npm start"
