--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,15 @@ backend/venv
 *.pyo
 *.pyd
 __pycache__/
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.staging
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
