Remove AnalysisView, MapView, and ResultsView components along with their routes from the Vue.js application. Update jsconfig.json to exclude these views from the project configuration.

--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -15,5 +15,10 @@
       "dom.iterable",
       "scripthost"
     ]
-  }
+  },
+  "exclude": [
+    "src/views/AnalysisView.vue",
+    "src/views/MapView.vue",
+    "src/views/ResultsView.vue"
+  ]
 }
