--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.5.0",
     "core-js": "^3.8.3",
     "d3": "^7.9.0",
+    "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.2",
